# postgresql

./: .cirrus.star  .cirrus.tasks.yml  .cirrus.yml  .cirrus.yml.swp  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  GNUmakefile.in  README  README.gtt.txt  README.md  README.nvwal  bench1  bench2  bench3  bench4  bench5  bench_read_stream.sh  bench_slope_planning.sql  benchwide  brin-test.py  configure  configure.ac  configure.in  conversion_helpers.txt  init  meson.build  meson_options.txt  notnulltest.sql  run  test.sql  trunc-clog-concurrency.c  v1-0001-Invalidate-Buffer-By-Bufnum.patch
contrib/bench_radix_tree/: Makefile  bench_radix_tree--1.0.sql  bench_radix_tree.c  bench_radix_tree.control  meson.build
contrib/binaryheap_bench/: Makefile  binaryheap_bench--1.0.sql  binaryheap_bench.c  binaryheap_bench.control  meson.build  old_binaryheap.c  old_binaryheap.h  xx_binaryheap.c  xx_binaryheap.h
contrib/bloom/: Makefile  blcost.c  blinsert.c  bloom.h  blscan.c  blutils.c  blvacuum.c  blvalidate.c  meson.build
contrib/bool_plperl/: Makefile  bool_plperl.c  bool_plperl.control  bool_plperlu--1.0.sql  bool_plperlu.control  meson.build
contrib/bytea_plperl/: Makefile  bytea_plperl--1.0.sql  bytea_plperl.c  bytea_plperl.control  bytea_plperlu--1.0.sql  bytea_plperlu.control  meson.build
contrib/bytea_toaster/: Makefile  bytea_toaster--1.0.sql  bytea_toaster.c  bytea_toaster.control  meson.build
contrib/cube/: Makefile  cube--1.2--1.3.sql  cube.c  cube.c.orig  cubeparse.y  meson.build
contrib/dummy_toaster/: Makefile  dummy_toaster--1.0.sql  dummy_toaster.c  dummy_toaster.control  meson.build
contrib/ext_vacuum_statistics/: .gitignore  Makefile  README.md  ext_vacuum_statistics--1.0.sql  ext_vacuum_statistics.conf  ext_vacuum_statistics.control  meson.build  vacuum_statistics.c
contrib/hstore_plperl/: Makefile  hstore_plperl.c  meson.build
contrib/join_hardness/: Makefile  join_hardness.c  meson.build
contrib/jsonb_plperl/: Makefile  jsonb_plperl--1.0.sql  jsonb_plperl.c  jsonb_plperlu--1.0.sql  meson.build
contrib/pageinspect/: Makefile  brinfuncs.c  btreefuncs.c  fsmfuncs.c  ginfuncs.c  gistfuncs.c  hashfuncs.c  heapfuncs.c  meson.build  pageinspect--1.10--1.11.sql  pageinspect--1.11--1.12.sql  pageinspect--1.13--1.14.sql  pageinspect--1.5.sql  pageinspect--1.6--1.7.sql  pageinspect--1.7--1.8.sql  pageinspect--1.8--1.9.sql  pageinspect.control  pcfuncs.c  rawpage.c  spgistfuncs.c
contrib/pg_buffercache/: Makefile  meson.build  pg_buffercache--1.2.sql  pg_buffercache--1.3--1.4.sql  pg_buffercache--1.4--1.5.sql  pg_buffercache--1.4.sql  pg_buffercache_pages.c  pg_buffercache_stats.c
contrib/pg_copy_json/: Makefile  meson.build  pg_copy_json--1.0.sql  pg_copy_json.c  pg_copy_json.control
contrib/pg_prewarm/: autoprewarm.c  meson.build  pg_prewarm.c
contrib/pg_surgery/: Makefile  heap_surgery.c  meson.build
contrib/pg_tracing/: Makefile  meson.build  pg_tracing--1.0.sql  pg_tracing.c  pg_tracing.control  pg_tracing.h  pg_tracing_explain.c  pg_tracing_explain.h  pg_tracing_parallel.c  pg_tracing_parallel.h  pg_tracing_query_process.c  pg_tracing_query_process.h  pg_tracing_span.c  pg_tracing_span.h  query_process.c  query_process.h  span.c  span.h
contrib/pg_visibility/: meson.build  pg_visibility--1.1.sql  pg_visibility.c
contrib/pg_walinspect/: Makefile  meson.build  pg_walinspect--1.0--1.1.sql  pg_walinspect--1.0.sql  pg_walinspect--1.1--1.2.sql  pg_walinspect.c  pg_walinspect.control
contrib/pgtrashcan/: Makefile  README.md  meson.build  pgtrashcan--1.0.sql  pgtrashcan.c  pgtrashcan.control
contrib/sslinfo/: Makefile  config.bash  meson.build  sslinfo--1.2--1.3.sql  sslinfo.c
contrib/tablefunc/: Makefile  meson.build  tablefunc--1.0--1.1.sql  tablefunc--1.0.sql  tablefunc.c  tablefunc.control
contrib/tsm_system_rows/: meson.build  tsm_system_rows.c
contrib/tsm_system_time/: meson.build  tsm_system_time.c
contrib/uuid-ossp/: meson.build
contrib/vci/: Makefile  README  meson.build  vci--1.0.sql  vci.conf  vci.control  vci_main.c  vci_read_guc.c  vci_shmem.c  vci_supported_funcs.c  vci_supported_funcs.sql  vci_supported_types.c
doc/doxygen/: Doxyfile.in  doxy_filter.l  meson.build
src/: Makefile  Makefile.global.in  Makefile.shlib  meson.build  nls-global.mk
src/backend/: Makefile  meson.build  nls.mk  postgres.abidiff-suppr.ini  postgres.x86_64-linux.abi.xml
src/common/: Makefile  archive.c  binaryheap.c  blkreftable.c  blocksize.c  cipher.c  cipher_nss.c  cipher_openssl.c  colenc.c  compression.c  config_info.c  controldata_utils.c  controllog_utils.c  cryptohash.c  cryptohash_nss.c  cryptohash_openssl.c  d2s.c  d2s.h  d2s_intrinsics.h  exec.c  f2s.c  fe_archive.c  file_perm.c  file_utils.c  guc-file.l  hashfn.c  hashfn_unstable.c  hex.c  hmac.c  hmac_openssl.c  instr_time.c  io_stream.c  ip.c  jsonapi.c  keywords.c  kmgr_utils.c  logging.c  md5.c  md5_common.c  md5_openssl.c  (+28 more)
src/fe_utils/: .gitignore  Makefile  astreamer_file.c  cancel.c  cancel_set.c  conditional.c  connect.c  connect_utils.c  encryption.c  logging.c  meson.build  option.c  option_utils.c  parallel_slot.c  print.c  psqlscan.l  query_utils.c  recovery_gen.c  simple_list.c  stats_export.c  string_utils.c
src/include/: Makefile  bestatus.h  c.h  c.h.orig  fmgr.h  funcapi.h  meson.build  miscadmin.h  pg_config.h.in  pg_config.h.win32  pg_config_manual.h  pgstat.h  pgstat.h.~1~  pgtime.h  port.h  postgres.h  postgres_ext.h  protocol.h  varatt.h  windowapi.h
src/makefiles/: Makefile.freebsd  Makefile.linux  Makefile.netbsd  Makefile.openbsd  Makefile.solaris  meson.build  pgxs.mk
src/pl/: Makefile
src/port/: Makefile  README  README.md  chklocale.c  dirmod.c  explicit_bzero.c  inet_net_ntop.c  inet_net_pton.c  meson.build  mkdtemp.c  open.c  path.c  pg_bitutils.c  pg_crc32c_armv8.c  pg_crc32c_armv8_choose.c  pg_crc32c_avx512.c  pg_crc32c_avx512_choose.c  pg_crc32c_loongarch.c  pg_crc32c_sse42_choose.c  pg_hw_feat_check.c  pg_localeconv_r.c  pg_popcount_avx512.c  pg_popcount_avx512_choose.c  pg_signal_processor.c  pg_strong_random.c  (+30 more)
(+5901 files in other folders)
